# feature-store-test

./: .env  .gitignore  Dockerfile  README.md  Scaling and monitoring strategies.md  data_discovery.ipynb  main.py  pyproject.toml  tests.py
core/: constants.py  feature_store_manager.py  inference.py  utils.py
data/: historical_data.csv  inference_data.csv  test_task_data.csv
html/Pipedrive/: index.html  main.html  tests.html
html/Pipedrive/core/: constants.html  feature_store_manager.html  index.html  inference.html  utils.html
models/: loyalty_predictor.pkl
